--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "test:journeys": "jest --testPathPattern='suites/journeys/'",
     "test:hotels": "jest --testPathPattern='suites/hotels/'",
     "test:bookings": "jest --testPathPattern='suites/bookings/'",
+    "test:api": "jest",
+    "test:e2e": "playwright test",
+    "test:minimal": "playwright test --project=minimal",
+    "test:journey": "playwright test --project=journey",
+    "test:all": "npm run test:api && npm run test:e2e",
+    "mcp:start": "node src/mcp-server.js",
     "report": "echo 'JUnit XML in ./reports; HTML via external tools'"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.4",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "body-parser": "^2.2.0",
     "dotenv": "^16.4.5",
+    "express": "^5.1.0",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "pactum": "^3.6.8",
