--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -1,30 +1,21 @@
 name: api-tests
 on: [push, pull_request, workflow_dispatch]
 jobs:
-  tests:
+  journey-test:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        shard: [1, 2, 3, 4]
     env:
       BASE_URL: https://book.liteapi.travel/v3.0
       LITEAPI_KEY: ${{ secrets.LITEAPI_KEY }}
-      RUN_ID: ${{ github.run_id }}-${{ matrix.shard }}
+      RUN_ID: ${{ github.run_id }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 20 }
       - run: npm ci
-      - name: Run shard
-        run: |
-          npx jest \
-            --maxWorkers=50% \
-            --testPathPattern="src/suites" \
-            --shard=${{ matrix.shard }}/4 \
-            --reporters=default --reporters=jest-junit
+      - name: Run API Journey Test
+        run: npm run test:journeys
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: junit-xml-${{ matrix.shard }}
-          path: reports/junit.xml
+          name: api-journey-results
+          path: reports/
