--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^22.7.4",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "pactum": "^3.6.8",
