--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "test": "jest",
     "test:ci": "jest --reporters=default --reporters=jest-junit",
     "test:journeys": "jest --testPathPattern='suites/journeys/'",
+    "test:smoke": "jest --testPathPattern='suites/journeys/' --testNamePattern='^((?!@JIRA_BUG).)*$'",
     "test:hotels": "jest --testPathPattern='suites/hotels/'",
     "test:bookings": "jest --testPathPattern='suites/bookings/'",
+    "test:bug": "jest --testNamePattern='@JIRA_BUG'",
     "test:api": "jest",
     "test:e2e": "playwright test",
     "test:minimal": "playwright test --project=minimal",
